--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,5 +1,5 @@
-# Workflow optionnel pour GitHub Pages
-# Si vous préférez utiliser GitHub Actions au lieu de la configuration manuelle
+# Workflow pour GitHub Pages
+# IMPORTANT: Dans Settings → Pages → Source, choisissez "GitHub Actions"
 
 name: Deploy GitHub Pages
 
@@ -7,23 +7,35 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'docs/**'
 
 permissions:
   contents: read
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/configure-pages@v4
-      - uses: actions/upload-pages-artifact@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/
-      - id: deployment
+          path: ./docs
+      
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
 
