--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 title: Stations Météorologiques API
 description: Documentation de l'API Stations Météorologiques
-theme: cayman
-
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
